# dsleonard-git-tools

./: .editorconfig  .gitignore  .gitlab-ci.yml  README.md  dependencies.txt  home.md  pyproject.toml
.github/scripts/: update-version-branches.sh
.github/workflows/: release.yml  toc.yml
ci/: test-jobs.yml
post_gen_resources/: .gitignore  __init__.py  cookiecutter.json  find_or_install_uv.py  post_gen_runner.py  pyproject.toml  uv.toml
post_gen_resources/src/dsleonard_cc_rc_merge/: __init__.py  cc_rc_merge.py  version.py
post_gen_resources/src/dsleonard_git_api/: __init__.py  git_api.py  git_local_tools.py  version.py
post_gen_resources/src/dsleonard_git_remote_manager/: __init__.py  create_new_remote.py  git_remote_manager.py
post_gen_resources/src/dsleonard_qx/: __init__.py  qx.py  version.py
src/dsleonard_git_tools/: __init__.py  core.py  create_new_remote.py  git_remote_manager.py
